@startuml Diagramas de Classes do Domínio
class Cinema {
    +int id
    +String nome
    +String endereco
}

class Sala {
    +int id
    +String nome
    +int capacidade
}

class Filme {
    +int id
    +String titulo
    +int duracao
}

class Sessao {
    +int id
    +DateTime horario
    +int publico_atual
}

Cinema "1" -- "*" Sala : possui
Sala "1" -- "*" Sessao : abriga
Filme "1" -- "*" Sessao : exibe
@enduml